{
    "name": "InventoryInput",
    "maps": [
        {
            "name": "GetKey",
            "id": "6a4a31f4-aa5c-423f-9380-e1dd60fa6cb1",
            "actions": [
                {
                    "name": "LeftShift",
                    "type": "Button",
                    "id": "b5bbd473-2acb-4729-b186-42675eb0f3d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "11c1ea3b-c061-421d-8512-ad2b802cd43f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "4214d8c4-7fc9-4968-96c7-13943a4901b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "243258db-8ccb-4c73-bf2c-e3233d6db618",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "114c3fd5-6b98-4232-b0ef-8d5ebb7c50ad",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93dc173c-2914-4bc0-ba58-daa07e7c7e64",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}